added arrays on length 100

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <main>
       <div id="griddiv"></div>
       <div id="controls">
-        <button id="array">Generate Array</button>
+        <button id="array">Generate Array of length 10</button>
+        <button id="array100">Generate Array of length 100</button>
         <button id="sortbutton">Sort Array</button>
       </div>
     </main>
